# torch

./: .env  .gitignore  .pylintrc  linear_regression_model.pkl  pyproject.toml  requirements.txt
ML.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
datasets/: __init__.py
datasets/raw/: HR.csv  constants.py  train.json
lessons/: indexing.py  main.py  tensor_math.py  test.py
math/: matrix.py
src/: config.py  main.py  test.py
src/all/: datas.py  datasets.py  grid_search_sv.py  index.py  klasters.py  linear.py  plt.py
src/all/models/: language_processing.py  number_vision.py  reccomendations.py
src/data_manipulation/: test.py
src/data_manipulation/EDA/: lesson_1.py  lesson_2.py  lesson_3.py  lesson_4.py  matplot.py  seaborn_lesson.py  sweetwiz_lesson.py
src/data_manipulation/data_cleaning/: lesson_1.py  lesson_2.py  lesson_4.py  lesson_5.py  lesson_6.py
src/data_manipulation/data_transformation/: lesson_1.py  lesson_3.py  normalizer.py
src/data_manipulation/homeworks/: main.py  outliers.py
src/data_manipulation/outliers/: coding_category.py  lesson_1.py
src/data_manipulation/theme_1/: lesson_1.py  lesson_2.py
src/methods/: gradient.py
src/models/: SIGMOID_SGD.py  classification.py  test.py
src/models/classification/: gauss_bayes.py  knn.py  naive_bies.py
src/models/decision_tree/: ada_boost_regression.py  (+4 more)
src/numpy_lessons/: index.py  indexing.py  math_operatioons.py  matrix_vectors.py  operations.py
trash/: classification.py  scikit.py
trash/lessons/: ai.py  matrix.py  tensors.py
trash/math/: matrix.py  test.py
(+27 files in other folders)
