
[project]
name = "ML"
version = "0.1.0"
description = "My first ML project"
authors = [{ name = "Oleg" }]

[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages]
find = {}

[project.scripts]
my_script = "src.main:main"

[tool.black]
line-length = 88
